@@ -122,6 +122,16 @@ void SCIPhashtableFree(
    SCIP_HASHTABLE**      hashtable           /**< pointer to the hash table */
    );
 
+/** rmoves all elemets of the hash table
+ *
+ *  @note From the performance point of view you should not fill and clear a hash table to often since the clearing can
+ *        be expensive. Clearing is done by looping over all buckets and removing the hast table lists one-by-one.
+ */
+extern
+void SCIPhashtableClear(
+   SCIP_HASHTABLE*       hashtable           /**< hash table */
+   );
+
 /** inserts element in hash table (multiple inserts of same element possible) */
 extern
 SCIP_RETCODE SCIPhashtableInsert(
